# ChangeLog for app-admin/collectd
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/collectd/ChangeLog,v 1.28 2011/09/17 22:48:14 dilfridge Exp $

*collectd-5.0.0-r2 (17 Sep 2011)

  17 Sep 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +collectd-5.0.0-r2.ebuild, +files/collectd-5.0.0-varnish.patch:
  Add support for varnish plugin and fix bug 380297

  26 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  collectd-5.0.0-r1.ebuild:
  Add libgcrypt dependency, bug 376751

  26 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org> metadata.xml:
  Improve metadata

  25 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org> files/collectd.initd:
  Fix option deprecation warning in init script, bug 375731

  25 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  collectd-5.0.0-r1.ebuild, +files/collectd-5.0.0-yajl2-2.patch:
  Add missing yajl 1/2 check, bug 374411

  25 Jul 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  collectd-4.10.3-r1.ebuild, collectd-5.0.0-r1.ebuild:
  Add sys-devel/libtool to RDEPEND, bug 376085

  18 Jul 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  collectd-5.0.0-r1.ebuild, +files/collectd-5.0.0-yajl2.patch, metadata.xml:
  Add upstream compatibility patch for yajl-v2, bug 374411; add Johan
  Bergström as proxied maintainer

  24 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  collectd-4.10.3-r1.ebuild, +files/collectd-4.10.3-werror.patch,
  collectd-5.0.0-r1.ebuild:
  Don't use -Werror else gcc-4.6 will drive us mad; move 4.10.3 to EAPI=4;
  use wrappers for chown and chmod

*collectd-5.0.0-r1 (24 Apr 2011)
*collectd-4.10.3-r1 (24 Apr 2011)

  24 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -collectd-4.10.2-r3.ebuild, -collectd-4.10.3.ebuild,
  +collectd-4.10.3-r1.ebuild, -collectd-5.0.0.ebuild,
  +collectd-5.0.0-r1.ebuild, files/collectd.confd, files/collectd.initd:
  Add useflag for perl bindings and static libs, run as unprivileged user;