@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX collectd-4.10.1-libiptc.patch 534 RMD160 dd6c016797ec4e6e5c7c67bbbeddd50d1c59badc SHA1 253efd36642f7ab1253bcc307e0f4d0e1a4d8e21 SHA256 f6c63e0cb686e4d7a655b9ff0b69e8ba75a9cf40c2ae79c6ec97c1e7377d2f4e
 AUX collectd-4.10.1-libperl.patch 917 RMD160 2feb20abbf7fd036e34957c190689f1e668ff321 SHA1 1c8312b576faa6a855f4f615995b007b108325ba SHA256 26e3c74392166a2438d7106e94953f871aedfe3b643c866afc8865c1ef7534c7
@@ -20,14 +20,12 @@ DIST collectd-5.0.0.tar.bz2 1372805 RMD160 7b0b9060a4dbde937fa2263076fdd81f328f4
 EBUILD collectd-4.10.3-r1.ebuild 12528 RMD160 2ad40970131dc4bc194a9d109d3120767b1d68c4 SHA1 46d610c1107d8f51aa5627e6a8ac1d036bf6a593 SHA256 c2b7de77077f354dc676b7d4785943037972803f238f1d3bb8a4d3aa5a256cda
 EBUILD collectd-5.0.0-r1.ebuild 12903 RMD160 3b9b1d9dbe1e3862c7811bc3921a84d4556a9ffa SHA1 c9666d55467fbd10ad50a4585857af19db580ca3 SHA256 545ca644b98970d4eedef9058470ea76a01817b90c4cad71c886ac600f903efe
 EBUILD collectd-5.0.0-r2.ebuild 12996 RMD160 5e5ecc67f2b206e3d4c1cf1c014123a147b6ec4e SHA1 6fb1867f1529d8cf2a73a1b10656257e7239931e SHA256 675b625a33de100858da8ccfbc73c9469e9086d7594a87d3285eddb6bdf59a90
-MISC ChangeLog 6098 RMD160 6979840a3172d2df48204899d79e1826d805bfba SHA1 e0265ba244e856a0ccd8367f4d4d3dbd44ae44db SHA256 310bd5fc949c526260b0450bb3404ffe886e50bb8473de7272e6266c05fbdaa6
-MISC metadata.xml 11772 RMD160 ce9c0eaa84ef58a60125f107d45204ac7221697d SHA1 307fcf979e43f08f3e3a9c225af4a8f5fd181af3 SHA256 50fcd29cb64c90b17e3f0ca0fff03568a9d99562a1f14224ed1494659e41119e
+MISC ChangeLog 6256 RMD160 55005240a8e47ea0188f465c64e529c588faebbb SHA1 f998cf4ffce6373417aad30be648815d2236bc69 SHA256 8b0402f384020d19bc7675f955ae57b0a1fd155ea77265b2e942cc87e3dbe73c
+MISC metadata.xml 11747 RMD160 8c7912edcc4970ba68ce6e8e87620e71ebad8ddd SHA1 f4c50a6232b9e581ddc679b8cd3b9d8887977ee6 SHA256 360c8d20b14cccbced28fdf08f199a932ae5dee8106541c9a99f2d041288c54e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iJwEAQEIAAYFAk589RQACgkQfXuS5UK5QB2sIwP9Gc88WCR1LxGuu0A76qFD++Uu
-m7Fwv6yISSbMOH1gB0YHlTJBLvdyKr/qtiK//ZI2IFuvSouQ0AIO6DKY6M/Ky2ac
-IUYQM8KDd8nLM3U237TY2H84G5+LyS17FIpIJU42Y/MsQ/vYqr/xHccv3DBij5w1
-P2f5rVViJBDOhHppxno=
-=5P1D
+iEYEARECAAYFAk6dmW4ACgkQVWmRsqeSphMvXgCffO6eAYHMLy0H0jGhxLTCPnpU
+KnkAnA3s4hproMVL6MHbRD3aQTms2Mqa
+=us3f
 -----END PGP SIGNATURE-----
