@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/collectd
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/collectd/ChangeLog,v 1.28 2011/09/17 22:48:14 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/collectd/ChangeLog,v 1.29 2011/10/18 15:21:12 jer Exp $
+
+  18 Oct 2011; Jeroen Roovers <jer@gentoo.org> metadata.xml:
+  Fix maintainer tag order and remove bug wrangler instructions that machines
+  would not understand.
 
 *collectd-5.0.0-r2 (17 Sep 2011)
 
